# sdp26-1

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/design_specs/: Design Requirements.docx
docs/final_report/: Team 1 SDP Report 12-12-25.docx
hardware/: Switch Fixture Ring V2.stl  __init__.py
hardware/controller/: #auto_saved_files#  _autosave-controller.kicad_pcb  _autosave-controller.kicad_sch  controller-B_Cu.gbr  controller-B_Mask.gbr  controller-B_Paste.gbr  controller-B_Silkscreen.gbr  controller-Edge_Cuts.gbr  controller-F_Cu.gbr  controller-F_Mask.gbr  controller-F_Paste.gbr  controller-F_Silkscreen.gbr  controller-NPTH.drl  controller-PTH.drl  controller-job.gbrjob  controller.kicad_pcb  controller.kicad_prl  controller.kicad_pro  controller.kicad_sch  fp-info-cache  untitled.kicad_sch  ~controller.kicad_pcb.lck  ~controller.kicad_sch.lck
hardware/firmware/: CMakeLists.txt  __init__.py  glove_client.py  platformio.ini  server.py  wifi_client.cpp
hardware/firmware/main/: CMakeLists.txt  glove.cpp  glove.h  main.cpp  test.cpp  uwb_programming.py  wifi_client.cpp  wifi_client.h  wifi_server.cpp  wifi_server.h
hardware/libraries/4328/: 4328.kicad_sym  4328.step  (+1 more)
hardware/pcb_layouts/: handheld_controller.kicad_pcb
hardware/schematics/: handheld_controller.kicad_sch
software/: __init__.py
software/lib/: falcon.py  falcon_vision.py  falcon_vision2.py  fiducial_test.py  fiducials.py  kalmanfilter.py  variables.py  wifi_manager.py
software/scripts/: __init__.py  automate_startup.sh  config_ap.sh  connection_client.sh  reset_wifi.ps1  reset_wifi.sh  setup.sh  setup_wifi.ps1  setup_wifi.sh  teardown.sh
software/src/: acd.py  drone_demo.py  falcon.py  falcon_vision.py  glove-and-flight.py  glove_client.py  glove_demo.py  main.cpp  main.py
software/tests/: better_arcing.py  centered_tracking.py  curvetrack.py  faster_tracking.py  fiducial_detection.py  final_script_cleaned.py  mp4withTracking.py  speedadapt.py  thread_download.py  yawtest.py
(+12 files in other folders)
