[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falcon"
version = "0.2.0"
description = "Filming Autonomous Learning and Cinematic Optic Navigator"
authors = [
    {name = "Team FALCON", email = "thocmurphy@umass.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "djitellopy",
    "opencv-python",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["software*", "hardware*"]

[tool.setuptools.package-data]
software = ["scripts/*.sh"]

[project.scripts]
falcon = "software.src.main:main"
